--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Informe Inmobiliario Ecuador</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <style>
         @media print {
             @page {
@@ -25,16 +26,21 @@
                 display: none !important;
             }
         }
+        .chart-container {
+            position: relative;
+            height: 50vh;
+            width: 100%;
+        }
     </style>
 </head>
 <body class="print-bg bg-gradient-to-b from-red-600 via-red-800 to-black min-h-screen text-white">
     <div class="container mx-auto p-8 relative">
-        <!-- Print Button -->
-        <button onclick="window.print()" class="no-print fixed top-4 right-4 bg-white/10 hover:bg-white/20 backdrop-blur-xl border border-white/20 px-4 py-2 rounded-lg flex items-center gap-2">
+        <!-- Download PDF Button -->
+        <button onclick="generatePDF()" class="no-print fixed top-4 right-4 bg-white/10 hover:bg-white/20 backdrop-blur-xl border border-white/20 px-4 py-2 rounded-lg flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                <path fill-rule="evenodd" d="M5 4v3H4a2 2 0 00-2 2v3a2 2 0 002 2h1v2a2 2 0 002 2h6a2 2 0 002-2v-2h1a2 2 0 002-2V9a2 2 0 00-2-2h-1V4a2 2 0 00-2-2H7a2 2 0 00-2 2zm8 0H7v3h6V4zm0 8H7v4h6v-4z" clip-rule="evenodd" />
+                <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" />
             </svg>
-            Imprimir / PDF
+            Descargar PDF
         </button>
 
         <!-- Logo -->
@@ -63,36 +69,51 @@
         </div>
 
         <!-- Charts -->
-        <div class="space-y-8">
+        <div class="space-y-12">
             <!-- Residential Projects Chart -->
             <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-6">
                 <h3 class="text-xl font-bold mb-4">Número Proyectos Residenciales (Casas –Depts) Periodo Comparativo 2023 –2024</h3>
-                <canvas id="residentialProjectsChart" width="400" height="200"></canvas>
+                <div class="chart-container">
+                    <canvas id="residentialProjectsChart"></canvas>
+                </div>
             </div>
 
             <!-- Available Units Chart -->
             <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-6">
                 <h3 class="text-xl font-bold mb-4">Unidades Disponibles (Casas –Depts) 11 Principales Ciudades</h3>
-                <canvas id="availableUnitsChart" width="400" height="200"></canvas>
+                <div class="chart-container">
+                    <canvas id="availableUnitsChart"></canvas>
+                </div>
             </div>
 
             <!-- Absorption Chart -->
             <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-6">
                 <h3 class="text-xl font-bold mb-4">Absorción Promedio Mes Proyectos Residenciales</h3>
-                <canvas id="absorptionChart" width="400" height="200"></canvas>
+                <div class="chart-container">
+                    <canvas id="absorptionChart"></canvas>
+                </div>
             </div>
 
             <!-- Distribution Charts -->
-            <div class="flex flex-col md:flex-row gap-4">
+            <div class="flex flex-col md:flex-row gap-8">
                 <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-6 w-full md:w-1/2">
                     <h3 class="text-xl font-bold mb-4">Peso Porcentual Oferta por Ciudad</h3>
-                    <canvas id="projectsDistributionChart" width="200" height="200"></canvas>
+                    <div class="chart-container">
+                        <canvas id="projectsDistributionChart"></canvas>
+                    </div>
                 </div>
                 <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-6 w-full md:w-1/2">
                     <h3 class="text-xl font-bold mb-4">Peso Porcentual Unidades Disponibles</h3>
-                    <canvas id="unitsDistributionChart" width="200" height="200"></canvas>
+                    <div class="chart-container">
+                        <canvas id="unitsDistributionChart"></canvas>
+                    </div>
                 </div>
             </div>
+        </div>
+
+        <!-- Powered by -->
+        <div class="mt-12 text-center text-white/60">
+            <p>Powered by Duality Domain</p>
         </div>
     </div>
 
