--- a/index.html
+++ b/index.html
@@ -31,12 +31,17 @@
             height: 50vh;
             width: 100%;
         }
+        @media (max-width: 640px) {
+            .chart-container {
+                height: 70vh;
+            }
+        }
     </style>
 </head>
 <body class="print-bg bg-gradient-to-b from-red-600 via-red-800 to-black min-h-screen text-white">
-    <div class="container mx-auto p-8 relative">
+    <div class="container mx-auto p-4 sm:p-8 relative">
         <!-- Download PDF Button -->
-        <button onclick="generatePDF()" class="no-print fixed top-4 right-4 bg-white/10 hover:bg-white/20 backdrop-blur-xl border border-white/20 px-4 py-2 rounded-lg flex items-center gap-2">
+        <button onclick="generatePDF()" class="no-print fixed top-4 right-4 bg-white/10 hover:bg-white/20 backdrop-blur-xl border border-white/20 px-4 py-2 rounded-lg flex items-center gap-2 z-10">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" />
             </svg>
@@ -45,65 +50,65 @@
 
         <!-- Logo -->
         <div class="w-full flex justify-center mb-8">
-            <div class="bg-white/10 backdrop-blur-xl p-6 rounded-2xl shadow-2xl">
-                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Diseño%20sin%20título%20(2)-lg6MRJ2vzhdrcgIQujzC1HWjx25lKX.png" alt="Bienes Raices Janneth Aguirre" class="w-60 h-auto object-contain">
+            <div class="bg-white/10 backdrop-blur-xl p-4 sm:p-6 rounded-2xl shadow-2xl">
+                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Diseño%20sin%20título%20(2)-lg6MRJ2vzhdrcgIQujzC1HWjx25lKX.png" alt="Bienes Raices Janneth Aguirre" class="w-40 sm:w-60 h-auto object-contain">
             </div>
         </div>
 
         <!-- Header -->
-        <div class="text-center space-y-4 mb-12">
-            <h1 class="text-4xl font-bold tracking-tight">COMPORTAMIENTO OFERTA RESIDENCIAL ORGANIZADA</h1>
-            <h2 class="text-3xl font-semibold text-white/90">11 PRINCIPALES CIUDADES DEL ECUADOR</h2>
-            <h3 class="text-2xl text-white/80">PERIODO COMPARATIVO 2023 - 2024</h3>
+        <div class="text-center space-y-4 mb-8 sm:mb-12">
+            <h1 class="text-2xl sm:text-4xl font-bold tracking-tight">COMPORTAMIENTO OFERTA RESIDENCIAL ORGANIZADA</h1>
+            <h2 class="text-xl sm:text-3xl font-semibold text-white/90">11 PRINCIPALES CIUDADES DEL ECUADOR</h2>
+            <h3 class="text-lg sm:text-2xl text-white/80">PERIODO COMPARATIVO 2023 - 2024</h3>
         </div>
 
         <!-- Objective -->
-        <div class="space-y-4 mb-12 backdrop-blur-xl bg-white/5 p-6 rounded-2xl border border-white/10">
-            <h2 class="text-2xl font-bold">OBJETIVO DEL ARTÍCULO</h2>
-            <p class="text-lg leading-relaxed text-white/90">
+        <div class="space-y-4 mb-8 sm:mb-12 backdrop-blur-xl bg-white/5 p-4 sm:p-6 rounded-2xl border border-white/10">
+            <h2 class="text-xl sm:text-2xl font-bold">OBJETIVO DEL ARTÍCULO</h2>
+            <p class="text-base sm:text-lg leading-relaxed text-white/90">
                 Medir el nivel comercial y constructivo de la oferta residencial (casas –departamentos) últimos dos años factor determinante que permite conocer la salud inmobiliaria de cada una de las ciudades analizadas esto resultado de los niveles de absorción promedio.
             </p>
-            <p class="text-lg leading-relaxed text-white/90">
+            <p class="text-base sm:text-lg leading-relaxed text-white/90">
                 Información actualizada puntualmente por ciudad y proyecto en el último semestre de cada año la cual en la actualidad es una herramienta básica e indispensable para el sector de la construcción, financiero y comercial del país.
             </p>
         </div>
 
         <!-- Charts -->
-        <div class="space-y-12">
+        <div class="space-y-8 sm:space-y-12">
             <!-- Residential Projects Chart -->
-            <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-6">
-                <h3 class="text-xl font-bold mb-4">Número Proyectos Residenciales (Casas –Depts) Periodo Comparativo 2023 –2024</h3>
+            <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6">
+                <h3 class="text-lg sm:text-xl font-bold mb-4">Número Proyectos Residenciales (Casas –Depts) Periodo Comparativo 2023 –2024</h3>
                 <div class="chart-container">
                     <canvas id="residentialProjectsChart"></canvas>
                 </div>
             </div>
 
             <!-- Available Units Chart -->
-            <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-6">
-                <h3 class="text-xl font-bold mb-4">Unidades Disponibles (Casas –Depts) 11 Principales Ciudades</h3>
+            <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6">
+                <h3 class="text-lg sm:text-xl font-bold mb-4">Unidades Disponibles (Casas –Depts) 11 Principales Ciudades</h3>
                 <div class="chart-container">
                     <canvas id="availableUnitsChart"></canvas>
                 </div>
             </div>
 
             <!-- Absorption Chart -->
-            <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-6">
-                <h3 class="text-xl font-bold mb-4">Absorción Promedio Mes Proyectos Residenciales</h3>
+            <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6">
+                <h3 class="text-lg sm:text-xl font-bold mb-4">Absorción Promedio Mes Proyectos Residenciales</h3>
                 <div class="chart-container">
                     <canvas id="absorptionChart"></canvas>
                 </div>
             </div>
 
             <!-- Distribution Charts -->
-            <div class="flex flex-col md:flex-row gap-8">
-                <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-6 w-full md:w-1/2">
-                    <h3 class="text-xl font-bold mb-4">Peso Porcentual Oferta por Ciudad</h3>
+            <div class="flex flex-col sm:flex-row gap-8">
+                <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 w-full sm:w-1/2">
+                    <h3 class="text-lg sm:text-xl font-bold mb-4">Peso Porcentual Oferta por Ciudad</h3>
                     <div class="chart-container">
                         <canvas id="projectsDistributionChart"></canvas>
                     </div>
                 </div>
-                <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-6 w-full md:w-1/2">
-                    <h3 class="text-xl font-bold mb-4">Peso Porcentual Unidades Disponibles</h3>
+                <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 w-full sm:w-1/2">
+                    <h3 class="text-lg sm:text-xl font-bold mb-4">Peso Porcentual Unidades Disponibles</h3>
                     <div class="chart-container">
                         <canvas id="unitsDistributionChart"></canvas>
                     </div>
@@ -112,7 +117,7 @@
         </div>
 
         <!-- Powered by -->
-        <div class="mt-12 text-center text-white/60">
+        <div class="mt-8 sm:mt-12 text-center text-white/60">
             <p>Powered by Duality Domain</p>
         </div>
     </div>
