--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 <body class="print-bg bg-gradient-to-b from-red-600 via-red-800 to-black min-h-screen text-white">
     <div class="container mx-auto p-4 sm:p-8 relative">
         <!-- Download PDF Button -->
-        <button onclick="generatePDFWithCharts()" class="no-print fixed top-4 right-4 bg-white/10 hover:bg-white/20 backdrop-blur-xl border border-white/20 px-4 py-2 rounded-lg flex items-center gap-2 z-10 transition duration-300 ease-in-out">
+        <button onclick="generatePDFWithCharts()" id="pdfButton" class="no-print fixed top-4 right-4 bg-white/10 hover:bg-white/20 backdrop-blur-xl border border-white/20 px-4 py-2 rounded-lg flex items-center gap-2 z-10 transition duration-300 ease-in-out">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" />
             </svg>
-            Descargar PDF
+            <span id="pdfButtonText">Descargar PDF</span>
         </button>
 
         <!-- Logo -->
