--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informe Inmobiliario Ecuador</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
         @media print {
             @page {
@@ -28,13 +29,13 @@
         }
         .chart-container {
             position: relative;
-            height: 50vh;
+            height: 400px;
             width: 100%;
-            page-break-inside: avoid;
+            margin-bottom: 2rem;
         }
         @media (max-width: 640px) {
             .chart-container {
-                height: 70vh;
+                height: 300px;
             }
         }
     </style>
@@ -103,14 +104,14 @@
                 </div>
 
                 <!-- Distribution Charts -->
-                <div class="flex flex-col sm:flex-row gap-8">
-                    <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 w-full sm:w-1/2 transition duration-300 ease-in-out hover:bg-white/15">
+                <div class="flex flex-col lg:flex-row gap-8">
+                    <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 w-full lg:w-1/2 transition duration-300 ease-in-out hover:bg-white/15">
                         <h3 class="text-lg sm:text-xl font-bold mb-4">Peso Porcentual Oferta por Ciudad</h3>
                         <div class="chart-container">
                             <canvas id="projectsDistributionChart"></canvas>
                         </div>
                     </div>
-                    <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 w-full sm:w-1/2 transition duration-300 ease-in-out hover:bg-white/15">
+                    <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 w-full lg:w-1/2 transition duration-300 ease-in-out hover:bg-white/15">
                         <h3 class="text-lg sm:text-xl font-bold mb-4">Peso Porcentual Unidades Disponibles</h3>
                         <div class="chart-container">
                             <canvas id="unitsDistributionChart"></canvas>
