--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Informe Inmobiliario Ecuador</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
     <style>
         @media print {
             body {
@@ -58,13 +59,6 @@
 </head>
 <body class="bg-gradient-to-b from-red-600 via-red-800 to-black min-h-screen text-white">
     <div class="container mx-auto p-4 sm:p-8 relative">
-        <!-- Print Button -->
-        <button id="printButton" class="no-print fixed top-4 right-4 bg-white/10 hover:bg-white/20 backdrop-blur-xl border border-white/20 px-4 py-2 rounded-lg flex items-center gap-2 z-10 transition duration-300 ease-in-out">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                <path fill-rule="evenodd" d="M5 4v3H4a2 2 0 00-2 2v3a2 2 0 002 2h1v2a2 2 0 002 2h6a2 2 0 002-2v-2h1a2 2 0 002-2V9a2 2 0 00-2-2h-1V4a2 2 0 00-2-2H7a2 2 0 00-2 2zm8 0H7v3h6V4zm0 8H7v4h6v-4z" clip-rule="evenodd" />
-            </svg>
-            <span>Imprimir Informe</span>
-        </button>
 
         <!-- Logo -->
         <header class="w-full flex justify-center mb-8">
@@ -84,7 +78,7 @@
 
             <!-- Objective -->
             <section class="space-y-4 mb-8 sm:mb-12 backdrop-blur-xl bg-white/5 p-4 sm:p-6 rounded-2xl border border-white/10 transition duration-300 ease-in-out hover:bg-white/10">
-                <h2 class="text-xl sm:text-2xl font-bold">OBJETIVO DEL ARTÍCULO</h2>
+                <h2 class="text-xl sm:text-2xl font-bold">ANÁLISIS DE MERCADO</h2>
                 <p class="text-base sm:text-lg leading-relaxed text-white/90">
                     Medir el nivel comercial y constructivo de la oferta residencial (casas –departamentos) últimos dos años factor determinante que permite conocer la salud inmobiliaria de cada una de las ciudades analizadas esto resultado de los niveles de absorción promedio.
                 </p>
