--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <style>
         @media print {
             body {
@@ -72,6 +73,13 @@
                 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Diseño%20sin%20título%20(2)-lg6MRJ2vzhdrcgIQujzC1HWjx25lKX.png" alt="Bienes Raices Janneth Aguirre" class="w-32 sm:w-60 h-auto object-contain">
             </div>
         </header>
+
+        <button id="downloadPDF" class="fixed top-4 right-4 bg-white/10 backdrop-blur-xl px-4 py-2 rounded-lg border border-white/20 hover:bg-white/20 transition-all duration-300 flex items-center gap-2 no-print">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+            </svg>
+            Descargar PDF
+        </button>
 
         <!-- Main Content -->
         <main>
