--- a/index.html
+++ b/index.html
@@ -46,14 +46,13 @@
         }
         .chart-container {
             position: relative;
-            height: 450px;
+            height: 70vh;
             width: 100%;
             margin-bottom: 2rem;
         }
-        @media (min-width: 768px) {
+        @media (max-width: 768px) {
             .chart-container {
-                height: 550px;
-                margin-bottom: 3rem;
+                height: 60vh;
             }
         }
         @media (max-width: 767px) {
@@ -191,7 +190,7 @@
             <!-- Charts -->
             <section class="space-y-4 sm:space-y-8">
                 <!-- Residential Projects Chart -->
-                <div class="chart-card page-break">
+                <div class="chart-card page-break min-h-screen flex flex-col">
                     <h3 class="text-base sm:text-xl font-bold mb-3 sm:mb-4">Número Proyectos Residenciales (Casas –Depts) Periodo Comparativo 2023 –2024</h3>
                     <div class="stats-grid">
                         <div class="stat-card">
@@ -207,13 +206,13 @@
                             <p class="text-sm sm:text-xl font-bold">2,43%</p>
                         </div>
                     </div>
-                    <div class="chart-container">
+                    <div class="chart-container flex-grow">
                         <canvas id="residentialProjectsChart"></canvas>
                     </div>
                 </div>
 
                 <!-- Available Units Chart -->
-                <div class="chart-card page-break">
+                <div class="chart-card page-break min-h-screen flex flex-col">
                     <h3 class="text-base sm:text-xl font-bold mb-3 sm:mb-4">Unidades Disponibles (Casas –Depts) 11 Principales Ciudades</h3>
                     <div class="stats-grid">
                         <div class="stat-card">
@@ -229,13 +228,13 @@
                             <p class="text-sm sm:text-xl font-bold">2,43%</p>
                         </div>
                     </div>
-                    <div class="chart-container">
+                    <div class="chart-container flex-grow">
                         <canvas id="availableUnitsChart"></canvas>
                     </div>
                 </div>
 
                 <!-- Absorption Chart -->
-                <div class="chart-card page-break">
+                <div class="chart-card page-break min-h-screen flex flex-col">
                     <h3 class="text-base sm:text-xl font-bold mb-3 sm:mb-4">Absorción Promedio Mes Proyectos Residenciales</h3>
                     <div class="stats-grid">
                         <div class="stat-card">
@@ -251,7 +250,7 @@
                             <p class="text-sm sm:text-xl font-bold">2,43%</p>
                         </div>
                     </div>
-                    <div class="chart-container">
+                    <div class="chart-container flex-grow">
                         <canvas id="absorptionChart"></canvas>
                     </div>
                 </div>
