--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             position: relative;
             width: 100%;
             height: 0;
-            padding-bottom: 75%; /* Aspect ratio 4:3 */
+            padding-bottom: 100%; /* Cambiado de 75% a 100% para un aspecto cuadrado */
         }
         .chart-container > canvas {
             position: absolute;
@@ -60,7 +60,13 @@
 
         @media (min-width: 768px) {
             .chart-container {
-                padding-bottom: 56.25%; /* Aspect ratio 16:9 for larger screens */
+                padding-bottom: 75%; /* Cambiado de 56.25% a 75% para pantallas más grandes */
+            }
+        }
+
+        @media (min-width: 1024px) {
+            .chart-container {
+                padding-bottom: 60%; /* Ajustado para pantallas más grandes */
             }
         }
         
