Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -231,6 +231,11 @@
                     </div>
                 </div>
             </section>
+            <div class="flex justify-center mt-8">
+                <button id="downloadPDF" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
+                    Descargar Análisis PDF
+                </button>
+            </div>
         </main>
 
         <!-- Powered by -->
@@ -243,3 +248,4 @@
 </body>
 </html>
 
+ñ
